@@ -12,11 +12,11 @@
  *******************************************************************************/
 
 task copyPublishMassiveRepo(type: Copy) {
-    from 'publish'
-    into 'build'
-    include 'massiveRepo/features/usertest.with.ibm.license.esa'
-    include 'massiveRepo/fixes/8550-wlp-archive-ifpm89011.jar'
-    include 'massiveRepo/samples/SampleX.jar'
+    from 'publish/massiveRepo'
+    into 'build/massiveRepo'
+    include 'features/usertest.with.ibm.license.esa'
+    include 'fixes/8550-wlp-archive-ifpm89011.jar'
+    include 'samples/SampleX.jar'
 }
 
 task copyPublishZips(type: Copy) {
@@ -41,7 +41,9 @@ task massiveCopyTask {
     }
 }
 
+jar.dependsOn(massiveCopyTask)
+
 test {
-    dependsOn massiveCopyTask
     dependsOn jar
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
 }
